# exercice_refactor

./: README.md  pyproject.toml
src/v1/: cpfBefore.py
src/v2/: cpf.py  cpfBefore.py  orders.py
tests/v2/: test_cpf_before.py  test_order.py  test_validation_cpf.py
