[tool.poetry]
name = "exercicio_1"
version = "0.1.0"
description = ""
authors = ["Jonatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"
pytest-sugar = "^0.9.5"
pytest-coverage = "^0.0"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
blue = "^0.9.1"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.15.2"

[tool.pylint.messages-control]
disable = [
  "missing-class-docstring",
  "missing-module-docstring",
  "missing-function-docstring",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
